0.8.10 (UNRELEASED)
-------------------
- Fix build failure of tests/test-ioctl-tree.c on powerpc with recent glibcs.
- preload: Wrap readlinkat() and canonicalize_file_name(), to work with
  udev >= 220.

0.8.9 (2015-05-22)
------------------
- umockdev-record: Ignore stderr from udevadm info, to avoid udev debug
  message spew on stderr if udev debugging is enabled. (Debian #767909)
- Fix recording of USB devices on recent kernels: Pass device as major:minor
  instead of assuming that they are only 8 bit (which is not true any more).
- Skip /umockdev-run/integration/input-touchpad test instead of failing when
  X.org does not start up. Calling Xorg is not allowed in build environments in
  e. g. Fedora. (issue #47)

0.8.8 (2014-09-22)
------------------
- Skip O_TMPFILE test on Linux versions which don't support that.

0.8.7 (2014-09-19)
------------------
- /umockdev-run/integration/input-evtest-evemu test: Be more liberal in parsing
  evtest's SYN event output, as it changed in 1.32.
- preload: Properly wrap open() with O_TMPFILE. Thanks Cemil Azizoglu.

0.8.6 (2014-09-01)
------------------
- Fix compilation on sparc with gcc 4.9.
- Support attributes with leading directory names, such as "queue/rotational".
  (issue #41)
- Create /sys/block symlink for block devices (other part of issue #41).

0.8.5 (2014-07-11)
------------------
- Fix building with gcc 4.9 on 32 bit architectures.
- Restrict input-touchpad test case to 64 bit architectures, as we don't
  currently have recorded ioctls for 32 bit.
- Lower number of iterations in mt_uevent test case to avoid overflowing the
  netlink buffer on loaded machines.

0.8.4 (2014-07-10)
------------------
- Make SKIP messages go to to stdout, like all the other the test suite output.
- Fix test case failures when running tests without a controlling tty.

0.8.3 (2014-07-10)
------------------
- Add umockdev_testbed_get_property() method. This is mostly for internal