@@ -3,6 +3,8 @@
 - Fix build failure of tests/test-ioctl-tree.c on powerpc with recent glibcs.
 - preload: Wrap readlinkat() and canonicalize_file_name(), to work with
   udev >= 220.
+- Create /sys/bus/ hierarchy instead of /sys/class for "usb" and "pci"
+  subsystems, to match what the real kernel does.
 
 0.8.9 (2015-05-22)
 ------------------
